--- a/goldbach/index.ipynb
+++ b/goldbach/index.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,17 +26,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "├── goldbach-ref.pkl\n",
+      "├── goldbach.ipynb\n",
+      "├── index.ipynb\n",
+      "└── submissions\n",
+      "    ├── 1.ipynb\n",
+      "    ├── 1.py\n",
+      "    ├── 2.ipynb\n",
+      "    ├── 2.py\n",
+      "    ├── 3.ipynb\n",
+      "    ├── 3.py\n",
+      "    ├── 4.ipynb\n",
+      "    ├── 4.py\n",
+      "    ├── 5.ipynb\n",
+      "    ├── 5.py\n",
+      "    ├── 6.ipynb\n",
+      "    └── 6.py\n",
+      "\n",
+      "1 directory, 15 files\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "tree"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Reference Implementations\n",
     "\n",
     "If you have marked up a reference implementation, like the one in [`median.ipynb`](median.ipynb), you can load this reference using `pybryt.ReferenceImplementation.compile`. Because references are relatively static and can take some time to execute, you can pickle the reference implementations to a file with `pybryt.ReferenceImplementation.dump`."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['submissions/6.py',\n 'submissions/2.py',\n 'submissions/3.py',\n 'submissions/4.py',\n 'submissions/5.py',\n 'submissions/1.py']"
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "[<pybryt.student.StudentImplementation at 0x7f7fcc733a58>,\n <pybryt.student.StudentImplementation at 0x7f7fcc3c7a20>,\n <pybryt.student.StudentImplementation at 0x7f7fcc729dd8>,\n <pybryt.student.StudentImplementation at 0x7f7fcc3b5ef0>,\n <pybryt.student.StudentImplementation at 0x7f7fcc729a20>,\n <pybryt.student.StudentImplementation at 0x7f7fcc3c7978>]"
+      "text/plain": "[<pybryt.student.StudentImplementation at 0x7f7fcc551860>,\n <pybryt.student.StudentImplementation at 0x7f7fcc730908>,\n <pybryt.student.StudentImplementation at 0x7f7fcc551828>,\n <pybryt.student.StudentImplementation at 0x7f7fcc6031d0>,\n <pybryt.student.StudentImplementation at 0x7f7fcc603908>,\n <pybryt.student.StudentImplementation at 0x7f7fcc617978>]"
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "[ReferenceResult([\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation)\n ]),\n ReferenceResult([\n   AnnotationResult(satisfied=False, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=False, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation)\n ]),\n ReferenceResult([\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=False, annotation=pybryt.NotAnnotation)\n ]),\n ReferenceResult([\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=False, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation)\n ]),\n ReferenceResult([\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=False, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation)\n ]),\n ReferenceResult([\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=False, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=False, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation),\n   AnnotationResult(satisfied=False, annotation=pybryt.NotAnnotation)\n ])]"
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
